Fixed ktlInvisibleScrollBars.

--- a/KTL.css
+++ b/KTL.css
@@ -7,7 +7,7 @@
 	* 2019-2023
     */
 
-/* KTL CSS version: 0.7.7 */
+/* KTL CSS version: 0.7.8 */
 
 /************ General Settings **************/
 :root {
@@ -187,7 +187,7 @@ th .fa-caret-left {
 /* Apply the style to the entire body of the webpage to allow scrolling, but with invisible H/V scrollbars. */
 .ktlInvisibleScrollBars {
 	overflow: auto; /* Enable scrolling */
-	scrollbar-width: none; /* For Firefox */
+	scrollbar-width: auto; /* For Firefox */
 	-ms-overflow-style: none; /* For Internet Explorer and Edge */
 }
 
